# ReAct

./: Cargo.toml  README.md
snake_game/: index.html  script.js  style.css
src/: main.rs
src/agent/: agent.rs  deepseek_client.rs  mod.rs  react_template.rs  tool.rs
